--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "crypto listing app",
   "main": "server.js",
   "scripts": {
-    "start": "node server",
-    "server": "nodemon server",
+    "start": "node server.js",
+    "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\" "
   },
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/UrsTrulyAditya/crypto#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.5.0"
   },
