--- a/cryptoList-main/server/package.json
+++ b/cryptoList-main/server/package.json
@@ -4,14 +4,14 @@
   "description": "crypto listing app",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js",
+    "start": "node server",
+    "server": "nodemon server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\" "
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/UrsTrulyAditya/crypto.git"
+    "url": "git+https://github.com/UrsTrulyAditya/crypto.git"
   },
   "author": "UrsTrulyAditya",
   "license": "ISC",
@@ -21,7 +21,6 @@
   "homepage": "https://github.com/UrsTrulyAditya/crypto#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.5.0"
   },
